# BLS_Microdata_Analysis

./: .gitignore  Dockerfile  LICENSE  README.md  blurb.txt  cps_variable_list.txt  data_dictionary.md  linkedin_post.txt  main.py  pyproject.toml  relevant_cols.txt  tempCodeRunnerFile.python
scripts/: bls_api_pull.py  bls_cps_pipeline.py  bls_crosscheck.py  bls_microdata_analysis.py  constants.py  cps_underemp.py  dashboard.py  test.py  test2.py
