[project]
name = "distributed-riding-bumblebee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.2.0",
    "dash-bootstrap-components>=2.0.4",
    "duckdb>=1.5.3",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "requests>=2.32.0",
    "watchfiles>=1.2.0",
]
